--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,5 +8,12 @@ jobs:
      # 输出IP
     - name: IP
       run: sudo curl ifconfig.me
-    - name: Start SSH via tmate
+    - name: Start SSH via ngrok
       uses: P3TERX/ssh2actions@main
+      with:
+         mode: ngrok
+env:
+     NGROK_TOKEN: ${{ secrets.NGROK_TOKEN }}
+     NGROK_REGION: us
+     SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
+     TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
